<resources>
    <string name="app_name">F Coffee</string>
    <string name="title_bottom_table">Bàn uống</string>
    <string name="title_bottom_account">Cá Nhân</string>
    <string name="title_bottom_statistics">Thống kê</string>
    <string name="title_bottom_logout">Đăng xuất</string>
    <string name="title_ll_button_store">Cửa hàng</string>
    <string name="title_ll_button_accumulated_points">Điểm tích lũy</string>
    <string name="title_ll_button_location">Địa điểm</string>
    <string name="my_preferences">TOKEN</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="category_array">
        <item>Tất cả</item>
        <item>Nước trái cây</item>
        <item>Các loại trà</item>
        <item>Các loại cafe</item>
        <item>Đồ uống có gas</item>
        <item>Đồ uống đá xay</item>
        <item>Sữa</item>
    </string-array>
</resources>
