<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".activities.TableActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:background="@color/colorMain"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="F Coffee"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/dp20" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9.3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="10">

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/vp_home"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="9.3">

            </androidx.viewpager.widget.ViewPager>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:padding="@dimen/dp10"
                android:layout_weight="0.7"
                android:background="@color/colorMain"
                android:orientation="horizontal"
                android:weightSum="4">

                <LinearLayout
                    android:id="@+id/ll_button_table"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/img_icon_table"
                        android:layout_width="@dimen/dp23"
                        android:layout_height="@dimen/dp23"
                        android:src="@mipmap/ic_table" />

                    <TextView
                        android:id="@+id/txt_title_table"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/title_bottom_table"
                        android:textColor="@color/colorBottomIcon"
                        android:textSize="10sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_button_statistics"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/img_icon_statistics"
                        android:layout_width="@dimen/dp23"
                        android:layout_height="@dimen/dp23"
                        android:src="@mipmap/ic_statistics" />

                    <TextView
                        android:id="@+id/txt_title_statistics"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/title_bottom_statistics"
                        android:textColor="@color/colorBottomIcon"
                        android:textSize="10sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_button_account"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/img_icon_account"
                        android:layout_width="@dimen/dp20"
                        android:layout_height="@dimen/dp20"
                        android:layout_marginTop="@dimen/dp2"
                        android:layout_marginBottom="@dimen/dp1"
                        android:src="@mipmap/ic_account" />

                    <TextView
                        android:id="@+id/txt_title_account"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/title_bottom_account"
                        android:textColor="@color/colorBottomIcon"
                        android:textSize="10sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_button_logout"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/img_icon_logout"
                        android:layout_width="@dimen/dp20"
                        android:layout_height="@dimen/dp20"
                        android:layout_marginTop="@dimen/dp2"
                        android:layout_marginBottom="@dimen/dp1"
                        android:src="@mipmap/ic_logout" />

                    <TextView
                        android:id="@+id/txt_title_logout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/title_bottom_logout"
                        android:textColor="@color/colorBottomIcon"
                        android:textSize="10sp" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>