<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".modules.Account.activities.AccountFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp20"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp40"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/custom_frame_input"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txt_fullname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp50"
                            android:gravity="center"
                            android:text="Ruby"
                            android:textColor="@color/colorBlack"
                            android:textSize="@dimen/dp20"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txt_role"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp10"
                            android:layout_marginBottom="@dimen/dp10"
                            android:gravity="center"
                            android:text="Nhân viên"
                            android:textSize="18dp"
                            android:textStyle="normal" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/dp1"
                            android:background="#DDD" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:weightSum="3">

                            <LinearLayout
                                android:id="@+id/ll_button_store"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:orientation="vertical"
                                android:weightSum="2">

                                <ImageButton
                                    android:id="@+id/btnMessage"
                                    android:layout_width="@dimen/dp40"
                                    android:layout_height="@dimen/dp40"
                                    android:layout_margin="@dimen/dp10"
                                    android:background="@color/colorWhite"
                                    android:src="@mipmap/ic_store" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:gravity="center"
                                    android:text="@string/title_ll_button_store" />
                            </LinearLayout>

                            <View
                                android:layout_width="@dimen/dp1"
                                android:layout_height="match_parent"
                                android:background="#DDD" />

                            <LinearLayout
                                android:id="@+id/ll_button_accumulated_points"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/txt_accumulated_points"
                                    android:layout_width="@dimen/dp40"
                                    android:layout_height="@dimen/dp40"
                                    android:layout_gravity="center"
                                    android:layout_margin="@dimen/dp10"
                                    android:gravity="center"
                                    android:text="0"
                                    android:textSize="@dimen/dp23" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:gravity="center"
                                    android:text="@string/title_ll_button_accumulated_points" />
                            </LinearLayout>

                            <View
                                android:layout_width="@dimen/dp1"
                                android:layout_height="match_parent"
                                android:background="#DDD" />

                            <LinearLayout
                                android:id="@+id/ll_button_location"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:orientation="vertical">

                                <ImageButton
                                    android:id="@+id/btnLocation"
                                    android:layout_width="@dimen/dp40"
                                    android:layout_height="@dimen/dp40"
                                    android:layout_margin="@dimen/dp10"
                                    android:background="@color/colorWhite"
                                    android:src="@mipmap/ic_location" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_marginBottom="@dimen/dp5"
                                    android:gravity="center"
                                    android:text="@string/title_ll_button_location" />
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgAvatar"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:background="@mipmap/ic_account" />
                </LinearLayout>
            </FrameLayout>

            <TextView
                android:id="@+id/txt_account_sologan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp16"
                android:layout_marginBottom="@dimen/dp16"
                android:gravity="center"
                android:text="Trên đường thành công của người đàn ông luôn có bóng dáng người phụ nữ" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/txt_account"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/dp10"
                    android:layout_marginBottom="@dimen/dp10"
                    android:drawableLeft="@mipmap/ic_account_signin"
                    android:drawablePadding="@dimen/dp10" />

                <EditText
                    android:id="@+id/txt_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/dp10"
                    android:layout_marginBottom="@dimen/dp10"
                    android:drawableLeft="@mipmap/ic_lock"
                    android:drawablePadding="@dimen/dp10" />

                <Button
                    android:id="@+id/btn_update_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp10"
                    android:layout_marginBottom="@dimen/dp10"
                    android:background="@drawable/custom_button_next_step"
                    android:text="Cập nhật"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/dp14" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</FrameLayout>